fix: Pos onboarding fix (#321)